Fixed more spacing issues

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -91,5 +91,6 @@
     }
     .text-container {
       text-align: justify;
+      margin: 1rem;
     }
   }
