--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ section {
 
 .about-containers {
     gap: 2rem;
-    margin-bottom: -1rem;
+    margin-bottom: -1.5rem;
     margin-top: 2rem;
 }
 
